# tauri-plugin-bluetooth

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
.github/workflows/: audit.yml  main.yml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
guest-js/: constants.ts  index.ts  types.ts  utils.ts
ios/: Package.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_availability.toml  request_device.toml
permissions/schemas/: schema.json
src/: bluetooth.rs  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src/bluetooth/: models.rs  utils.rs
