[package]
name = "tauri-plugin-bluetooth"
version = "0.1.0"
authors = ["ParticleG <particle_g@outlook.com>"]
edition = "2021"
rust-version = "1.77.2"
description = "Tauri plugin for Bluetooth Low Energy"
readme = "README.md"
repository = "https://github.com/26F-Studio/tauri-plugin-bluetooth"
license-file = "LICENSE"
links = "tauri-plugin-bluetooth"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
btleplug = { version = "0.11.7", features = ["serde"] }
futures = "0.3.31"
uuid = { version = "1.13.1", features = ["v4"] }
tokio = "1.43.0"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
